WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190744
[Win][Clang] WebView.h: warning: 'QueryInterface' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
https://bugs.webkit.org/show_bug.cgi?id=190744
Summary
[Win][Clang] WebView.h: warning: 'QueryInterface' overrides a member function...
Fujii Hironori
Reported
2018-10-18 21:20:55 PDT
[Win][Clang] WebView.h: warning: 'QueryInterface' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] clang-cl reports following compilation warnings.
> [5812/6203] Building CXX object Source\WebKitLegacy\CMakeFiles\WebKitLegacy.dir\win\WebView.cpp.obj > In file included from ..\..\Source\WebKitLegacy\win\WebView.cpp:28: > ..\..\Source\WebKitLegacy\win/WebView.h(115,39): warning: 'QueryInterface' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual HRESULT STDMETHODCALLTYPE QueryInterface(_In_ REFIID riid, _COM_Outptr_ void** ppvObject); > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\unknwnbase.h(113,47): note: overridden virtual function is here > virtual HRESULT STDMETHODCALLTYPE QueryInterface( > ^ > In file included from ..\..\Source\WebKitLegacy\win\WebView.cpp:28: > ..\..\Source\WebKitLegacy\win/WebView.h(116,37): warning: 'AddRef' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual ULONG STDMETHODCALLTYPE AddRef(); > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\unknwnbase.h(117,45): note: overridden virtual function is here > virtual ULONG STDMETHODCALLTYPE AddRef( void) = 0; > ^ > In file included from ..\..\Source\WebKitLegacy\win\WebView.cpp:28: > ..\..\Source\WebKitLegacy\win/WebView.h(117,37): warning: 'Release' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual ULONG STDMETHODCALLTYPE Release(); > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\unknwnbase.h(119,45): note: overridden virtual function is here > virtual ULONG STDMETHODCALLTYPE Release( void) = 0; > ^ > In file included from ..\..\Source\WebKitLegacy\win\WebView.cpp:28: > ..\..\Source\WebKitLegacy\win/WebView.h(120,39): warning: 'canShowMIMEType' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual HRESULT STDMETHODCALLTYPE canShowMIMEType(_In_ BSTR mimeType, _Out_ BOOL*); > ^ > DerivedSources\WebKitLegacy\Interfaces\WebKit.h(42833,43): note: overridden virtual function is here > virtual HRESULT STDMETHODCALLTYPE canShowMIMEType( > ^ > In file included from ..\..\Source\WebKitLegacy\win\WebView.cpp:28: > ..\..\Source\WebKitLegacy\win/WebView.h(121,39): warning: 'canShowMIMETypeAsHTML' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual HRESULT STDMETHODCALLTYPE canShowMIMETypeAsHTML(_In_ BSTR mimeType, _Out_ BOOL*); > ^
Attachments
Patch
(52.79 KB, patch)
2018-10-18 22:05 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2018-10-18 22:05:40 PDT
Created
attachment 352767
[details]
Patch
EWS Watchlist
Comment 2
2018-10-18 22:07:21 PDT
Attachment 352767
[details]
did not pass style-queue: ERROR: Source/WebKitLegacy/win/WebView.h:123: The parameter name "mimeTypes" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKitLegacy/win/WebView.h:174: The parameter name "types" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKitLegacy/win/WebView.h:176: The parameter name "withPasteboardTypes" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKitLegacy/win/WebView.h:351: The parameter name "blacklist" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKitLegacy/win/WebView.h:353: The parameter name "whitelist" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKitLegacy/win/WebView.h:353: The parameter name "blacklist" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKitLegacy/win/WebView.h:353: __inout_ecount_full is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebKitLegacy/win/WebView.h:394: The parameter name "whitelist" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKitLegacy/win/WebView.h:394: The parameter name "blacklist" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKitLegacy/win/WebView.h:394: __inout_ecount_full is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebKitLegacy/win/WebView.h:396: The parameter name "whitelist" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKitLegacy/win/WebView.h:396: The parameter name "blacklist" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKitLegacy/win/WebView.h:396: __inout_ecount_full is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 13 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ross Kirsling
Comment 3
2018-10-18 22:55:51 PDT
Comment on
attachment 352767
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=352767&action=review
> Source/WebKitLegacy/win/WebView.cpp:-7389 > -#elif USE(TEXTURE_MAPPER_GL) > - if (isAcceleratedCompositing()) > - m_acceleratedCompositingContext->flushPendingLayerChanges(); > -#endif
Seems suspicious that there's a non-CA branch here, yet browsing the repo at the point when it was added (
https://github.com/WebKit/webkit/commit/2681acc99de48945f0ffb71730cbfc000c044aaf
), it certainly seems like this was always an implementation of a CACFLayerTreeHostClient method... One way or another, I guess it's safe to fix now!
Fujii Hironori
Comment 4
2018-10-18 23:33:09 PDT
Thank you very much for reviewing my patch. Year, I had the same question, but I don't know why. But, It is safe to remove because WebView::flushPendingGraphicsLayerChanges overrides nothing in WinCairo port and WinCairo port EWS succeeds to compiling the patch, it means the method is unused.
Fujii Hironori
Comment 5
2018-10-21 19:07:17 PDT
Comment on
attachment 352767
[details]
Patch Clearing flags on attachment: 352767 Committed
r237313
: <
https://trac.webkit.org/changeset/237313
>
Fujii Hironori
Comment 6
2018-10-21 19:07:19 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-10-22 09:43:51 PDT
<
rdar://problem/45455556
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug